// protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. proto/auth/auth.proto
syntax = "proto3";

package task;

option go_package = "github.com/Murodkadirkhanoff/taqsym.uz/proto/task;taskpb";

service TaskService {
  rpc Create (CreateTaskRequest) returns (CreateTaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  int64 user_id = 3;
}

message CreateTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
 
}

message ListTasksResponse {
  repeated Task tasks = 1;
  string message = 2;
}

message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 user_id = 4;
}